# goldsmiths-final-project

./: .env.prod.sample  .env.sample  .gitignore  LICENSE  README.md  app.py  db.sqlite3  devshell.zsh  manage.py  models.py  pytest.ini  requirements.in  requirements.txt  shell.nix
assets/: tailwind.config.js
config/: config.exs  dev.exs  runtime.exs
core/: admin.py  apps.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_ircclient_name_alter_ircclient_sasl_login_and_more.py  0003_ircevent.py  0004_ircevent_inserted_at.py  0006_alter_ircevent_event_target.py
corelibs/asyncio/: utils.py
corelibs/irc/: store.py  utils.py
frontend/: index.html
frontend/login/: index.html
irchub/: asgi.py  settings.py  urls.py  wsgi.py
lib/: irchub_web.ex
lib/irchub/: accounts.ex  application.ex  mailer.ex  repo.ex  util.ex
lib/irchub_web/: router.ex  telemetry.ex  user_auth.ex
logs/: tmp_mix_test.txt
prod/: pyproject.toml
prototype/: .envrc  README.md  manage.py
prototype/core/: admin.py  urls.py
prototype/irchub/: settings.py
prototype_v3/: pyproject.toml
prototype_v3/etc/: postgresql.auto.conf
prototype_v3/irchub/: .env  .env.sample
prototype_v3/irchub/core/clientpool/: gens.py  sv.py
prototype_v3/irchub/irchub/: settings.py
requirements/: base.in  dev.in  igor.in
routes/: api.py
src/: pyproject.toml
test/: settings.py
v0/: README.md  pyproject.toml
v0/src/core/: urls.py
v0/src/core/tests/: test_core.py
v0/src/corelibs/: apps.py
v0/src/corelibs/irc/: store.py
v0/src/corelibs/tests/: test_corelibs.py
v0/src/irchub/: wsgi.py
(+138 files in other folders)
